# Multiple-Ligand-Alignment

./: .gitignore  README.md  pyproject.toml  tmp_graphql.py  tmp_rcsb_test.py
benchmarking/: compute_neff_golden.py
benchmarking/CPU_GPU/: benchmark_cpu_gpu.py  plot_results.py
benchmarking/jit_warmup/: _helpers.py  conftest.py  test_jit_warmup.py  test_recompilation_scenarios.py  test_timing.py
benchmarking/profiling/compute_neff/: profile_graph.py
examples/LOSO/: README.md
examples/LOSO/A_plot_global_neff/: 01_fetch_and_precompute.py  02_run_loso.py  03_plot_results.py  04_run_CCD.py  05_plot_CCD_results.py  06_compare_aggregrated_results.py
examples/LOSO/B_Neff_Bfactors/: 01_fetch_pdb_ligands.py  02_compute_neff_bfactors.py  03_plot_bfactors.py
examples/LOSO/common/: cdk2_config.yaml  utils.py  (+1 more)
examples/sensitivity/: 01_fetch_receptor_ligands.py  02_compute_cross_neff.py  03_plot_sensitivity.py  04_filter_PDB_ligands.py  README.md
ligand_neff/: __init__.py  _types.py  cli.py  compute.py  config.py  engine.py
ligand_neff/fingerprints/: __init__.py  decompose.py  encode.py
ligand_neff/io/: __init__.py  database.py  db_cache.py  query.py
ligand_neff/neff/: __init__.py  _state.py  aggregation.py  per_atom.py  pipeline.py  weighting.py
ligand_neff/similarity/: __init__.py  filtering.py  filtering_jax.py  tanimoto.py
ligand_neff/vis/: __init__.py  plot.py
plans/: BACKGROUND.md  MLA.md  optimisation_plan.md  typing_addendum.md
tests/: __init__.py  conftest.py
tests/integration/: test_integration.py  test_lambda.py
tests/unit/: test_engine.py
(+30 files in other folders)
